// file: pkg/db/proto/messages/mysql_config.proto
edition = "2023";

package gcommon.v1.database;

import "google/protobuf/go_features.proto";

option go_package = "github.com/jdfalk/gcommon/pkg/db/proto;dbpb";
option features.(pb.go).api_level = API_OPAQUE;

/**
 * MySQLConfig defines connection parameters for MySQL databases.
 */
message MySQLConfig {
  // MySQL connection DSN string
  string dsn = 1;

  // Maximum number of open connections
  int32 max_open_conns = 2;

  // Maximum number of idle connections
  int32 max_idle_conns = 3;

  // Connection timeout in seconds
  int32 connect_timeout_seconds = 4;
}
